--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #FFFFFF;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -5,16 +11,13 @@ body {
 }
 
 header {
-    width: 1444px;;
+    width: 100vw;
     height: 99px;
     background-color: #6C63FF;
     display: flex;
     border-radius: 3px;
     font-size: 24px;
-    
- 
-    
-    
+   
 }
  
 .menu-header {
@@ -62,12 +65,9 @@ header {
     justify-content: center;
     border-radius: 8px;
    
-    
-   
-
 }  
     
- .bottom{
+.bottom{
     width: 253px;
     height: 63.39px;
     background-color: #6C63FF;
