--- a/index/style.css
+++ b/index/style.css
@@ -1,17 +1,32 @@
+ 
+:root{
+    font-size: 62.5%;
+    --color-primary: #6C63FF;
+    --color-font-btn :#fff;
+    --color-btn-hover:#3d37ad;
+    --color-border-btn: #F1DBB4;
+    --color-bg: #f0f2f5;
+    --color-font-icon-green:#0FA958;
+    --color-font-icon-red:#EC3232;
+    --color-font-dark: #494949;
+}
+  
+
+
 ul, 
 li, 
 p {
     margin: 0px;
     padding: 0px;
     list-style: none;
-    font-size: 1,2rem;
+    font-size: 1.8rem;
     font-family: Arial;
 }
 
 body  {
     background-color: #FFFFFF;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-size: 1.8rem;
 }
 
 a {
@@ -99,60 +114,13 @@ font-weight: bold;
 }
 
 
- .mostrador-transacoes {
+.mostrador-transacoes {
     display: flex;
     border-radius: 8px;
 
 }
 
-.bottom-funcoes {    
-    width: 80%;
-    height: 134px;
-    color: #FFFFFF;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 8px;
 
-
-}  
-
- .bottom-ad {
-    width: 253px;
-    height: 63.39px;
-    background-color: #6C63FF;
-    margin: 20px;
-    border-radius: 8px;
-    padding: 5px;
-    text-align: center;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.bottom-meses {
-    display: flex;
-    width: 253px;
-    height: 63.39px;
-    background-color: #6C63FF;
-    margin: 20px;    
-    border-radius: 8px;
-    padding: 5px;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.bottom-tipo {
-    width: 253px;
-    height: 63.39px;
-    background-color: #6C63FF;
-    margin: 20px;
-    border-radius: 8px;
-    padding: 5px;
-    text-align: center;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
 .table-responsive {
     width: 90%;
     height: 340px;
@@ -174,4 +142,166 @@ font-weight: bold;
 
 .componentes-retangulo {
     width: 100%;
+}
+
+
+
+
+/*Add-Transaction =============== */
+
+#add-transaction {
+    display: flex;
+    gap: 20rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 8rem;
+}
+  
+#add-transaction a.btn{
+    display: inline-block;
+}
+  
+#add-transaction .btn {
+    background-color: var(--color-primary);
+  
+    text-decoration: none;
+  
+    font-size: 1.8rem;
+    color: var(--color-font-btn);
+    
+    width: 20rem;
+    padding: 1.8rem ;
+  
+    border: none;
+    border-radius: .8rem;
+  
+    cursor: pointer;
+  
+    transition: background-color .5s;
+}
+  
+#add-transaction .btn:hover {
+    background-color: #322d8f;
+}
+ 
+/*MODAL ================*/
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+  
+    background-color: rgba(0, 0, 0, .7);
+  
+    position: fixed;
+    top: 0;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    opacity: 0;
+    visibility: hidden;
+}
+  
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+  
+.modal {
+    background-color: #f0f2f5;
+    padding: 2.4rem;
+  
+    position: relative;
+  
+    width: 90%;
+    max-width: 500px;
+}
+  
+  /*formulario Modal */
+  
+  #form {
+    max-width: 500px;
+  
+  }
+  
+  #form h2 {
+    margin-top: 0;
+    color: var(--color-primary);
+  }
+  
+  
+  
+#form form input {
+    border: none;
+    border-radius: 0.8rem;
+  
+    padding: 1rem;
+  
+    width: 100%;
+}
+  
+.input-group {
+    margin-top: 0.8rem;
+}
+  
+.input-group small {
+    opacity: 0.4;
+}
+  
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.input-group.actions .btn, 
+.input-group.actions button {
+    width: 40%;
+}
+
+/*button cancelar modal */
+
+.btn.cancel {
+    color: #EC3232;
+    text-decoration: none;
+  
+    border: 1px solid #EC3232;
+  
+    height: 50px;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    opacity: 0.6;
+    transition: opacity .5s;
+}
+  
+.btn.cancel:hover {
+    opacity: 1;
+}
+
+/*btn salvar transações */
+button {
+    width: 100%;
+    height: 50px;
+  
+    border: none;
+  
+    color: white;
+    background: var(--color-font-icon-green);
+  
+    padding: 0;
+  
+    text-decoration: none;
+    text-align: center;
+  
+    cursor: pointer;
+  
+    transition: background 0.5s;
+}
+  
+button:hover {
+    background: #17dd73;
 }
