--- a/codigo-fonte/src/Tela_principal1/index/index.css
+++ b/codigo-fonte/src/Tela_principal1/index/index.css
@@ -1,114 +1,98 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+*{
+   margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
 
+}
+body{
+    background-color: #FFFFFF;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=devide-widht, initial-scaled=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script src="https://kit.fontawesome.com/503c420a8f.js" crossorigin="anonymous"></script>
-   
-    <title> Root </title>
- </head>
+header{
+    width: 100%;;
+    height: 99px;
+    background-color: #6C63FF;
+    display: flex;
+    border-radius: 3px;
+    font-size: 24px;
  
-<body> 
-  <header>
-        <div>
-        <div class="menu-header">
-          <div " class="menu"> 
-                <nav>
-                  <a href="">HOME</a> 
-                  <a href="">GRÁFICO</a>
-                </nav> 
-          </div>
-        <div class="icon-header">
-          <button><i class="fa-solid fa-circle-user"></i></button>
-        </div>
-        
-        </div>
-        </div>
-      </header>
 
-      <section>
-       <div>
-        <div class="mostrador-transacoes">
-          <div class="mostrador">
-                 <div class="texto">
-                   <h2>Entradas</h2>
-                   <p>R$12.000,00</p>
-                 </div>
-                   <i class="fa-solid fa-circle-arrow-up"></i>
-            </div>
-            <div class="mostrador">
-                  <div class="texto">
-                    <h2>Saídas</h2>
-                    <p>R$8.000,00</p>
-                  </div>
-                    <i class="fa-solid fa-circle-arrow-down"></i>
-            </div>
+}
+ 
+.menu-header {
+    max-width: 1080px;
+    display:flex;
+    justify-content: space-between;
+    margin: 50px;
+    font-size: 24px;
     
-              <div class="mostrador">
-                  <div class="texto">
-                    <h2>Total</h2>
-                    <p>R$4.000,00</p>
-                  </div>
-                    <i class="fa-regular fa-dollar-sign"></i> 
-              </div>
-       </div>
-      </div>
-
-      </section>
-      <section>
-        <div>
-            <div class="bottom-funcoes">
-               <div class="bottom">
-                  <h3>Adicionar</h3>
-                </div>
-              <div class="bottom">
-                <div>  
-                  <h3> Meses <i class="fa-solid fa-calendar-days"></i> </h3>
-                 
-                </div>
-                  
-             </div>
-             <div class="bottom">
-                <div>
-                  <h3>Tipo</h3>
-                </div>
-              </div>
-            </div>  
-        </div>
-      </section>
-           
-     <div class="componentes-retangulo">
-       <table> 
-           <tr>
-              <td><b>Data</b></td>
-              <td><b>Descrição</b></td>
-              <td><b>Valor</b></td>
-              <td><b>Tipo</b></td>
-              <td></td>
-            </tr>
-        </table>
-          <hr>
-        <table>   
-          <tr>
-              <td>04/04/2024</td>
-              <td>Salário</td>
-              <td>R$12.000,00</td>
-              <td><i style="color: green;" class="fa-solid fa-caret-up"></i></td>
-              <td><i class="fa-solid fa-trash-can"></i></td>
-          </tr>
-          <tr>
-              <td>04/04/2024</td>
-              <td>Financiamento</td>
-              <td>R$8.000,00</td>
-              <td><i style="color: red;" class="fa-solid fa-caret-down"></i></td>
-              <td><i class="fa-solid fa-trash-can"></i></td>
-          </tr> 
-        </table>
-     </div>
+}
+.menu, nav, a{
+    text-decoration: none;
+    padding-right: 30px;
+    color: #FFFFFF;
+    font-size: 24px;
+}
+ .icon-header, button{
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 25px;
+    color: grey;
+}
+ 
+ .mostrador{
+    width: 1284px;
+    height: 100px;
+    background-color:#ECEBF1; 
+    margin: 60px;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+ 
+.mostrador-transacoes{
+    display: flex;
+    border-radius: 8px;
+}
+.bottom-funcoes{
+    width: 1164px;
+    height: 134px;
+    color: #FFFFFF;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    border-radius: 8px;
+}  
+    
+ .bottom{
+    width: 253px;
+    height: 63.39px;
+    background-color: #6C63FF;
+    margin: 20px;
+    border-radius: 8px;
+    padding: 5px;
+    text-align: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.componentes-retangulo{
+    width: 1284px;
+    height: 437px;
+    border-radius: 8px;
+    margin: auto;
+    margin-bottom: 50px;
+    background-color: #ECEBF1;
+    box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.25);
   
+}
 
-</body>
-</html>
+td{
+   width: 982px;
+   height: 28px;
+   top: 28px;
+   left: 108px;
+   text-align: center;
+}
+
