--- a/codigo-fonte/src/Tela_principal1/index/index.css
+++ b/codigo-fonte/src/Tela_principal1/index/index.css
@@ -4,6 +4,20 @@
     box-sizing: border-box;
 
 }
+
+:root{
+   
+    --color-primary: #6C63FF;
+    --color-font-btn :#fff;
+    --color-btn-hover:#3d37ad;
+    --color-border-btn: #F1DBB4;
+    --color-bg: #f0f2f5;
+    --color-font-icon-green:#0FA958;
+    --color-font-icon-red:#EC3232;
+    --color-font-dark: #494949;
+  }
+  
+
 body{
     background-color: #FFFFFF;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -96,3 +110,159 @@ td{
    text-align: center;
 }
 
+/*Add-Transaction =============== */
+
+#add-transaction {
+    display: flex;
+    gap: 20rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 8rem;
+}
+  
+#add-transaction a.btn{
+    display: inline-block;
+}
+  
+#add-transaction .btn {
+    background-color: var(--color-primary);
+  
+    text-decoration: none;
+  
+    font-size: 1.8rem;
+    color: var(--color-font-btn);
+    
+    width: 20rem;
+    padding: 1.8rem ;
+  
+    border: none;
+    border-radius: .8rem;
+  
+    cursor: pointer;
+  
+    transition: background-color .5s;
+}
+  
+#add-transaction .btn:hover {
+    background-color: #322d8f;
+}
+
+/*MODAL ================*/
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+  
+    background-color: rgba(0, 0, 0, .7);
+  
+    position: fixed;
+    top: 0;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    opacity: 0;
+    visibility: hidden;
+}
+  
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+  
+.modal {
+    background-color: #f0f2f5;
+    padding: 2.4rem;
+  
+    position: relative;
+  
+    width: 90%;
+    max-width: 500px;
+}
+  
+  /*formulario Modal */
+  
+#form {
+    max-width: 500px;
+  
+}
+  
+#form h2 {
+    margin-top: 0;
+    color: var(--color-primary);
+}
+  
+  
+  
+#form form input {
+    border: none;
+    border-radius: 0.8rem;
+  
+    padding: 1rem;
+  
+    width: 100%;
+}
+  
+.input-group {
+    margin-top: 0.8rem;
+}
+  
+.input-group small {
+    opacity: 0.4;
+}
+  
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.input-group.actions .btn, 
+.input-group.actions button {
+    width: 40%;
+}
+
+/*button modal */
+button {
+    width: 100%;
+    height: 50px;
+  
+    border: none;
+  
+    color: white;
+    background: var(--color-font-icon-green);
+  
+    padding: 0;
+  
+    text-decoration: none;
+    text-align: center;
+  
+    cursor: pointer;
+  
+    transition: background 0.5s;
+  }
+  
+  button:hover {
+    background: #17dd73;
+  }
+  
+  .btn.cancel {
+    color: #EC3232;
+    text-decoration: none;
+  
+    border: 1px solid #EC3232;
+  
+    height: 50px;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    opacity: 0.6;
+    transition: opacity .5s;
+  }
+  
+  .btn.cancel:hover {
+    opacity: 1;
+  }
