--- a/codigo-fonte/src/Cadastro/style.css
+++ b/codigo-fonte/src/Cadastro/style.css
@@ -26,7 +26,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: #6C63FF;
   padding: 1rem;
 }
 
