--- a/codigo-fonte/src/Tela_Principal2/style.css
+++ b/codigo-fonte/src/Tela_Principal2/style.css
@@ -4,6 +4,14 @@
     --white: #fff;
     --light-green: #3dd705;
     --red: #e92929;
+    --color-primary: #6C63FF;
+  --color-font-btn :#fff;
+  --color-btn-hover:#3d37ad;
+  --color-border-btn: #F1DBB4;
+  --color-bg: #f0f2f5;
+  --color-font-icon-green:#0FA958;
+  --color-font-icon-red:#EC3232;
+  --color-font-dark: #494949;
 }
 
 
@@ -12,39 +20,81 @@
     padding: 0;
     box-sizing: border-box;
 }
-ul {
-    list-style: none;
-    color: #fff;
-    font-size: 18px;
+
+/*  help-user =================*/
+
+.help-user .p-help {
+    display: none;
+}
+  
+.help-user:hover .p-help {
+    display: inline;
+    cursor: pointer;
 }
 
-
-nav a:hover{
-    transition: 0.5s;
-    background: #e4e4e4;
-    color: #776fff;
-    padding: 10px;
-    border-radius: 3px;
-    
-}
-
-.menu {
-    display: flex;
-    gap: 50px;
-    margin-top: 10px;
-    margin-left: 35px;
-    
-}
+/* HEADER ============ */
 
 header {
-    background: #776fff;
+    background-color: var(--color-primary);
+    height: 6rem;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+}
+  
+header nav {
+    display: flex;
     justify-content: space-between;
-    
-    padding: 20px;
-    justify-items: right;
-    
+    align-items: center;
+}
+  
+header nav ul {
+    display: flex;
+    gap: 7.2rem;
+    list-style: none;
+    align-items: center;
+}
+  
+header nav ul li a {
+    color: var(--color-font-btn);
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-decoration: none;
+
+    transition: color .7s;
+}
+
+header nav ul li a:hover{
+    color: var(--color-border-btn);
+}
+
+header #user_avatar .ph-user {
+    font-size: 3rem;
+    background-color: #3d37ad;
+    color: var(--color-border-btn);
+  
+    border-radius: 999px;
+  
+    padding: .8rem;
+  
+    cursor: pointer;
+    transition: background-color .7s;
+}
+  
+header #user_avatar .ph-user:hover{
+    background-color: #322d8f;
+}
+  
+  
+h1 {
+    color: var(--color-font-btn);
+    font-weight: 300;
+    font-size: 2.2rem;
+}
+  
+h1 span {
+   font-size: 1.8rem;
+   color: var(--color-border-btn);
+   font-weight: 500;
 }
 
 html {
@@ -69,7 +119,7 @@ body {
 }
 
 .container {
-    width: min(90vw, 900px);
+    width: min(90vw, 1050px);
     margin: auto;
 }
 
@@ -78,17 +128,14 @@ h2 {
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
     color: var(--dark-blue);
-       font-weight: normal;
+    font-weight: normal;
 }
 
 /* Links & Buttons ===================== */
 a {
     color: var(--white);
     text-decoration: none;
-}
-
-a:hover {
-    color: #ec9d09f5;
+    font-size: 1.6rem;
 }
 
 button {
@@ -135,18 +182,6 @@ button:hover {
     opacity: 1;
 }
 
-/* Header ===================== */
-header {
-    background: #776fff;
-    padding: 2rem 0 2rem;
-    text-align: center;
-}
-
-#logo {
-    color: #fff;
-    font-weight: 100;
-}
-
 /* Balance ===================== */
 #balance {
     margin-top: 9rem;
@@ -172,10 +207,13 @@ header {
 .card h3 {
     font-weight: bold;
     font-size: 1.8rem;
+    
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    
 }
 
 .card p {
@@ -194,7 +232,7 @@ header {
 
 #input-control {   
     margin-top: 3rem; 
-    align-items: center;
+    
     
 }
 
@@ -205,6 +243,8 @@ header {
 
 /* Small-Card ===================== */
 .small-card {
+    width: 16rem;
+
     background: #6c63ff;
     padding: 0.8rem 4.5rem;
     border-radius: 0.50rem;   
@@ -217,7 +257,7 @@ header {
 .small-card h3 {
     font-weight: normal;
     font-size: 1.25rem;
-    
+    text-align: center;
     
 }
 
@@ -369,11 +409,20 @@ input {
 
 
 /* Responsive ===================== */
+@media (max-width: 796px) {
+    header {
+        align-items: start;
+    }
+
+    header nav ul li h1 {
+        display: none;
+    }    
+}
+
 @media (min-width: 800px) {
     html {
         font-size: 87.5%;
     }
-
     #balance {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -383,6 +432,7 @@ input {
     #input-control {
         display: grid;
         grid-template-columns: repeat(3, 2fr);
+        justify-items: center;
         gap: 3rem;
     }
 }
