--- a/codigo-fonte/src/Configuracao_perfil/index.css.css
+++ b/codigo-fonte/src/Configuracao_perfil/index.css.css
@@ -1,38 +1,156 @@
-body {background-color: #FFFFFF;
-      font-family: Arial, Helvetica, sans-serif;}   
-button {background-color:#6C63FF;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --dark-blue: #363f5f;
+  --white: #fff;
+  --light-green: #3dd705;
+  --red: #e92929;
+  --color-primary: #6C63FF;
+--color-font-btn :#fff;
+--color-btn-hover:#3d37ad;
+--color-border-btn: #F1DBB4;
+--color-bg: #f0f2f5;
+--color-font-icon-green:#0FA958;
+--color-font-icon-red:#EC3232;
+--color-font-dark: #494949;
+}
+
+
+
+body {
+  background-color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+button {
+  background-color: #6c63ff;
   color: white;
   border-radius: 20px;
   border-color: transparent;
   padding: 11px;
   width: 425px;
-  font-size: medium;}
-input
-   {padding: 13px;
-    outline: none;
-    width: 390px;
-    border-radius: 12px;
-    border-color: #ffe4c4a4;
-    font-size: medium;
-    border: groove;}
-h1 {position: fixed;
-    top: 13%;
-    left: 36%;}
-div {position: absolute;
-    top: 32%;
-    left: 34%;}
-hr {background-color: grey;}
-u {text-decoration-line: underline;
-   text-decoration-color: #6C63FF;}
-::placeholder 
- {color&#128274;}
+  font-size: medium;
+  cursor: pointer;
+}
+input {
+  padding: 13px;
+  outline: none;
+  width: 390px;
+  border-radius: 12px;
+  border-color: #ffe4c4a4;
+  font-size: medium;
+  border: groove;
+}
+h2 {
+  position: fixed;
+  top: 256px;
+  font-size: 2.4rem;
+
+  color: var(--color-font-dark);
+  
+}
+
+
+div {
+  position: absolute;
+  top: 32%;
+  left: 34%;
+}
+
+
+hr {
+  background-color: grey;
+}
+
+::placeholder {
+  color: #128274;
+}
 .purple-bar {
   width: 100%;
   height: 40px;
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   top: 0%;
-  left: 0%;  }
+  left: 0%;
+}
 .purple-bar p {
   color: white;
   margin-top: 9px;
-  margin-left: 12px;}
+  margin-left: 12px;
+}
+
+/* HEADER ============ */
+
+header {
+  background-color: var(--color-primary);
+  height: 6rem;
+  display: flex;
+  align-items: center;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav ul {
+  display: flex;
+  gap: 7.2rem;
+  list-style: none;
+  align-items: center;
+}
+
+header nav ul li a {
+  color: var(--color-font-btn);
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-decoration: none;
+
+  transition: color .7s;
+}
+
+header nav ul li a:hover{
+  color: var(--color-border-btn);
+}
+
+header #user_avatar .ph-user {
+  font-size: 3rem;
+  background-color: #3d37ad;
+  color: var(--color-border-btn);
+
+  border-radius: 999px;
+
+  padding: .8rem;
+
+  cursor: pointer;
+  transition: background-color .7s;
+}
+
+header #user_avatar .ph-user:hover{
+  background-color: #322d8f;
+}
+
+
+h1 {
+  color: var(--color-font-btn);
+  font-weight: 300;
+  font-size: 2.2rem;
+}
+
+h1 span {
+ font-size: 1.8rem;
+ color: var(--color-border-btn);
+ font-weight: 500;
+}
+
+html {
+  font-size: 67.5%; /* 15px */
+}
+
+.container {
+  width: min(90vw, 1050px);
+  margin: auto;
+}
