--- a/codigo-fonte/src/Configuracao_perfil/index.css.css
+++ b/codigo-fonte/src/Configuracao_perfil/index.css.css
@@ -22,7 +22,7 @@
 html, body {
   height: 100%;
   background-color: #ffffff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'poppins',sans-serif;
 }
 
 body {
@@ -37,8 +37,8 @@ button {
   border: none;
   padding: 15px;
   width: 100%;
-  font-size: 15pt;
-  font-weight: lighter;
+  font-size: 1.6rem;
+  font-weight: normal;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
   margin-top: 20px;
@@ -149,7 +149,7 @@ header nav ul {
 
 header nav ul li a {
   color: var(--color-font-btn);
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.7s;
@@ -176,7 +176,7 @@ header #user_avatar .ph-user:hover {
 h1 {
   color: var(--color-font-btn);
   font-weight: 300;
-  font-size: 2.0rem;
+  font-size: 2.2rem;
 }
 
 h1 span {
@@ -186,7 +186,7 @@ h1 span {
 }
 
 html {
-  font-size: 93.75%;
+  font-size: 63.5%;
 }
 
 .container {
